--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
+//    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -36,6 +37,9 @@ dependencies {
 
     // json
     implementation 'org.json:json:20231013'
+
+    // hibernate
+    // ext["hibernate.version"] = "5.6.5.Final"
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
