--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,8 @@ repositories {
 }
 
 dependencies {
-    // security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-    testImplementation 'org.springframework.security:spring-security-test'
+    // Password encoder
+    implementation 'at.favre.lib:bcrypt:0.10.2'
 
     // JWT
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
